--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,33 +1,42 @@
 ---
 title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+description: 'Fundamental concepts of ReDem’s API.'
+icon: "book-open"
+iconType: "regular"
 ---
 
-<Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
-</Note>
+**Welcome to the ReDem API documentation! 👋🏼** 
 
-## Welcome
+This documentation provides a set-by-step guide to help you unlock the full potential of ReDem by seamlessly integrating the ReDem API into your workflows and applications.
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+The ReDem is designed to enhance your survey data quality with **AI-driven quality assurance**. From evaluating and calculating ReDem Scores to filtering out low-quality respondents, ReDem provides all the tools you need to make your data more reliable and valuable. 
 
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
+The backbone of our platform is the ReDem API. With our API you have direct access to every feature ReDem offers from real-time data access to smooth integration with your existing applications.
 
-## Authentication
+Best of all, since the ReDem Application runs entirely on this API, everything you can do in the app, you can also do through the API. **No limitations, just endless possibilities!**
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+## Integration Use Cases
+The ReDem API supports two main integration use cases, allowing you to choose the approach that best fits your workflow: 
 
-```json
-"security": [
-  {
-    "bearerAuth": []
-  }
-]
+<CardGroup cols={2}>
+  <Card title="Real-Time results" icon="arrow-up-arrow-down" href="/api-reference/real-time-integration">
+    Get instant feedback on survey responses and data quality scores directly in your application.
+  </Card>
+  <Card title="Sync Integration" icon="arrows-rotate" href="/api-reference/sync-integration">
+    Automatically sync data quality scores with your systems at regular intervals for ongoing analysis.
+  </Card>
+</CardGroup>
+
+
+## Base URL
+ReDem’s API is built on REST principles following the [OpenAPI](https://www.openapis.org/) standard as much as possible.  For your data’s security, it operates exclusively over HTTPS, so you can trust that all interactions are encrypted. Unencrypted HTTP connections aren’t supported, keeping your data safe by default.
+
+The Base URL for all API endpoints is:
+```plainApiKey_xxx
+https://live-api.redem.io/
 ```
+
+
+<Note>ReDem’s API is currently in public beta and is subject to change. However, we will do our best to keep breaking changes to a minimum. </Note>
+
+If you have any questions or need assistance, don’t hesitate to reach out to our support team at support@redem.io. We’re here to help you get the most out of ReDem!
