Refactor navigation and add new pages

--- a/api-reference/api-keys.mdx
+++ b/api-reference/api-keys.mdx
@@ -12,7 +12,7 @@ Users can create multiple API keys, each with specific permissions to control ac
 ## Create API Key
 You can create an API key by following these steps:
 
-<Steps>
+<Steps titleSize="h3">
   <Step title="Navigate to manage API Keys">
     <p> Once you are logged in to [ReDem Application](https://app.redem.io/), navigate to the API Keys section in your profile. </p>
   </Step>
