--- a/api-reference/async-integration.mdx
+++ b/api-reference/async-integration.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Real-time results'
-description: 'Lear how API keys work on ReDem'
-icon: "arrow-up-arrow-down"
+title: 'For Researchers'
+description: 'Learn how to use ReDem as a researcher'
+icon: "telescope"
 iconType: "regular"
 ---
