--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -9,8 +9,6 @@ iconType: "regular"
 
 This documentation provides a set-by-step guide to help you unlock the full potential of ReDem by seamlessly integrating the ReDem API into your workflows and applications.
 
-The ReDem is designed to enhance your survey data quality with **AI-driven quality assurance**. From evaluating and calculating ReDem Scores to filtering out low-quality respondents, ReDem provides all the tools you need to make your data more reliable and valuable. 
-
 The backbone of our platform is the ReDem API. With our API you have direct access to every feature ReDem offers from real-time data access to smooth integration with your existing applications.
 
 Best of all, since the ReDem Application runs entirely on this API, everything you can do in the app, you can also do through the API. **No limitations, just endless possibilities!**
@@ -19,10 +17,10 @@ Best of all, since the ReDem Application runs entirely on this API, everything y
 The ReDem API supports two main integration use cases, allowing you to choose the approach that best fits your workflow: 
 
 <CardGroup cols={2}>
-  <Card title="Real-Time results" icon="arrow-up-arrow-down" href="/api-reference/real-time-integration">
+  <Card title="For Researchers" icon="telescope" href="/api-reference/async-integration">
     Get instant feedback on survey responses and data quality scores directly in your application.
   </Card>
-  <Card title="Sync Integration" icon="arrows-rotate" href="/api-reference/sync-integration">
+  <Card title="For Survey Tools" icon="screwdriver-wrench" href="/api-reference/sync-integration">
     Automatically sync data quality scores with your systems at regular intervals for ongoing analysis.
   </Card>
 </CardGroup>
