--- a/api-reference/sync-integration.mdx
+++ b/api-reference/sync-integration.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Sync integration'
-description: 'Lear how API keys work on ReDem'
-icon: "arrows-rotate"
+title: 'For Panels'
+description: 'Learn how to integrate ReDem with your survey panels'
+icon: "screwdriver-wrench"
 iconType: "regular"
 ---
