--- a/welcome.mdx
+++ b/welcome.mdx
@@ -1,5 +1,27 @@
 ---
 title: Welcome
-description: 'Welcome to the ReDem new documentation'
+description: 'Welcome to the ReDem documentation'
+icon: "hand-wave"
+iconType: "regular"
 ---
 
+
+<img src="/images/documentation-hero.png" />
+
+The ReDem is designed to enhance your survey data quality with **AI-driven quality assurance**. From evaluating and calculating ReDem Scores to filtering out low-quality respondents, ReDem provides all the tools you need to make your data more reliable and valuable.
+
+The ReDem documentation enables you to gain a deeper understanding of what ReDem is, and how best to use it for your organization’s use case.
+
+## New to ReDem?
+If you're new to ReDem, a great place to start is by [setting up your account](/account-setup). Follow these steps to get everything ready for your journey with ReDem!
+
+## Learn how ReDem works
+To get a better understanding of how ReDem works and what it can do, you can read more about [how it works](/how-it-works).
+
+## Next steps
+- Get familiar with the types of [quality checks](/quality-checks) ReDem performs to ensure data quality.
+- Start by [importing your first survey data](/import-data) into ReDem.
+- Explore the [API Reference](/api-reference) to understand the request and response formats.
+
+<br/>
+If you have any questions or need assistance, don’t hesitate to reach out to our support team at support@redem.io. We’re here to help you get the most out of ReDem!
