--- a/account-setup.mdx
+++ b/account-setup.mdx
@@ -1,97 +1,21 @@
 ---
 title: 'Account Setup'
-description: 'Learn how to preview changes locally'
+description: 'Join ReDem and get started today'
+icon: "rocket"
+iconType: "regular"
 ---
 
-<Info>
-  **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding.
-</Info>
+## Sign Up and Get Started
+To start using ReDem, create your account. <br/> Setting up your account is quick and easy. Here’s how to get started:
 
-Step 1. Install Mintlify on your OS:
+1. Go to the [ReDem homepage](https://redem.io) and click on the "Sign up" button.
+2. Fill in your email, choose a password, and provide your company information
+3. Click “Create Account” to complete the signup process.
 
-<CodeGroup>
+Once your account is successfully created, our business development team will review your account and get everything ready for you.
 
-```bash npm
-npm i -g mintlify
-```
+## Want to learn more?
+[Book a demo](https://meetings.hubspot.com/j-redem/get-to-know-redem) with our founding team to explore how ReDem can elevate your workflow!
 
-```bash yarn
-yarn global add mintlify
-```
-
-</CodeGroup>
-
-Step 2. Go to the docs are located (where you can find `mint.json`) and run the following command:
-
-```bash
-mintlify dev
-```
-
-The documentation website is now available at `http://localhost:3000`.
-
-### Custom Ports
-
-Mintlify uses port 3000 by default. You can use the `--port` flag to customize the port Mintlify runs on. For example, use this command to run in port 3333:
-
-```bash
-mintlify dev --port 3333
-```
-
-You will see an error like this if you try to run Mintlify in a port that's already taken:
-
-```md
-Error: listen EADDRINUSE: address already in use :::3000
-```
-
-## Mintlify Versions
-
-Each CLI is linked to a specific version of Mintlify. Please update the CLI if your local website looks different than production.
-
-<CodeGroup>
-
-```bash npm
-npm i -g mintlify@latest
-```
-
-```bash yarn
-yarn global upgrade mintlify
-```
-
-</CodeGroup>
-
-## Deployment
-
-<Tip>
-  Unlimited editors available under the [Pro
-  Plan](https://mintlify.com/pricing) and above.
-</Tip>
-
-You should see the following if the deploy successfully went through:
-
-<Frame>
-  <img src="/images/checks-passed.png" style={{ borderRadius: '0.5rem' }} />
-</Frame>
-
-## Troubleshooting
-
-Here's how to solve some common problems when working with the CLI.
-
-<AccordionGroup>
-  <Accordion title="Mintlify is not loading">
-    Update to Node v18. Run `mintlify install` and try again.
-  </Accordion>
-  <Accordion title="No such file or directory on Windows">
-Go to the `C:/Users/Username/.mintlify/` directory and remove the `mint`
-folder. Then Open the Git Bash in this location and run `git clone
-https://github.com/mintlify/mint.git`.
-
-Repeat step 3.
-
-  </Accordion>
-  <Accordion title="Getting an unknown error">
-    Try navigating to the root of your device and delete the ~/.mintlify folder.
-    Then run `mintlify dev` again.
-  </Accordion>
-</AccordionGroup>
-
-Curious about what changed in a CLI version? [Check out the CLI changelog.](/changelog/command-line)
+<br/>
+**We’re thrilled to have you join the ReDem community!** <br/> From day one, we’re here to make sure you have everything you need for a smooth and successful experience.🎉
