- Refactor account-setup.mdx - add new page for user guide

--- a/account-setup.mdx
+++ b/account-setup.mdx
@@ -14,8 +14,10 @@ To start using ReDem, create your account. <br/> Setting up your account is quic
 
 Once your account is successfully created, our business development team will review your account and get everything ready for you.
 
+You’ll then receive an email with an activation link. Just click the link to activate your account, and you’ll be ready to dive in and start using ReDem! 🎊
+
 ## Want to learn more?
 [Book a demo](https://meetings.hubspot.com/j-redem/get-to-know-redem) with our founding team to explore how ReDem can elevate your workflow!
 
 <br/>
-**We’re thrilled to have you join the ReDem community!** <br/> From day one, we’re here to make sure you have everything you need for a smooth and successful experience.🎉
+**We’re thrilled to have you join the ReDem community!** <br/> From day one, we’re here to make sure you have everything you need for a smooth and successful experience.
