--- a/api-reference/api-keys.mdx
+++ b/api-reference/api-keys.mdx
@@ -9,6 +9,8 @@ API Keys in ReDem allow you to programmatically send and retrieve data, making i
 
 Users can create multiple API keys, each with specific permissions to control access, making integrations secure and flexible.
 
+<Info>To create an API Key, you'll need a ReDem account. Don’t have an account yet? <br/>Get started by [setting up your account](/account-setup).</Info>
+
 ## Create API Key
 You can create an API key by following these steps:
 
