--- a/welcome.mdx
+++ b/welcome.mdx
@@ -19,8 +19,8 @@ If you're new to ReDem, a great place to start is by [setting up your account](/
 To get a better understanding of how ReDem works and what it can do, you can read more about [how it works](/how-it-works).
 
 ## Next steps
-- Get familiar with the types of [quality checks](/quality-checks) ReDem performs to ensure data quality.
-- Start by [importing your first survey data](/import-data) into ReDem.
+- Get familiar with the types of [quality checks](/quality-checks/introduction) ReDem performs to ensure data quality.
+- Start by [importing your first survey data](/features/data-import) into ReDem.
 - Explore the [API Reference](/api-reference) to understand the request and response formats.
 
 <br/>
