--- a/quality-checks/redem-score.mdx
+++ b/quality-checks/redem-score.mdx
@@ -1,7 +1,7 @@
 ---
-title: Quality Checks Overview
-description: 'Learn about the different quality checks ReDem performs'
-icon: "book-open"
+title: ReDem Score
+description: 'Learn about the ReDem Score and how it is calculated'
+icon: "hundred-points"
 iconType: "regular"
 ---
 
