Refactor API integration documentation

--- a/api-reference/async-integration.mdx
+++ b/api-reference/async-integration.mdx
@@ -4,3 +4,15 @@ description: 'Learn how to use ReDem as a researcher'
 icon: "telescope"
 iconType: "regular"
 ---
+
+<Steps titleSize="h3">
+  <Step title="Sign up and create an API key">
+    <p> Sign up for a ReDem account and create an API key. </p>
+  </Step>
+  <Step title="Integrate ReDem API into your workflow">
+    <p>Integrate ReDem API into your workflow by using the API key to authenticate your requests.</p>
+  </Step>
+  <Step title="Use API response to trigger your next step">
+    <p>Use the API response to trigger your next step in your workflow.</p>
+  </Step>
+</Steps>
