--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -20,7 +20,7 @@ The ReDem API supports two main integration use cases, allowing you to choose th
   <Card title="For Researchers" icon="telescope" href="/api-reference/async-integration">
     Get instant feedback on survey responses and data quality scores directly in your application.
   </Card>
-  <Card title="For Survey Tools" icon="screwdriver-wrench" href="/api-reference/sync-integration">
+  <Card title="For Panels" icon="screwdriver-wrench" href="/api-reference/sync-integration">
     Automatically sync data quality scores with your systems at regular intervals for ongoing analysis.
   </Card>
 </CardGroup>
