--- a/quality-checks/redem-score.mdx
+++ b/quality-checks/redem-score.mdx
@@ -14,16 +14,16 @@ Interviews undergo a comprehensive series of quality checks. The results are con
 ### Quality checks are conducted based on the following key criteria:
 
 <CardGroup cols={2}>
-  <Card title="Open-Ended Score" icon="messages">
+  <Card title="Open-Ended Score" icon="messages" href="/quality-checks/open-ended-score">
     The Open-Ended Score (OES) is an AI-based check of written answers to open-ended questions. It controls for:
   </Card>
-  <Card title="Coherence Score" icon="grid-2-plus">
+  <Card title="Coherence Score" icon="grid-2-plus" href="/quality-checks/coherence-score">
     Easily bring your survey data into ReDem by manually uploading it through the ReDem Application!
   </Card>
   <Card title="Time Score" icon="stopwatch" href="/quality-checks/time-score">
     The ReDem tool tracks both the total interview time and the time spent on each question, automatically detecting when a participant’s speed deviates from the norm
   </Card>
-  <Card title="Grid-Question Score" icon="list">
+  <Card title="Grid-Question Score" icon="list" href="/quality-checks/grid-question-score">
     The grid-question score evaluates respondents according to their response behavior within one or more matrix-questions
   </Card>
 </CardGroup>
