--- a/welcome.mdx
+++ b/welcome.mdx
@@ -19,9 +19,26 @@ If you're new to ReDem, a great place to start is by [setting up your account](/
 To get a better understanding of how ReDem works and what it can do, you can read more about [how it works](/how-it-works).
 
 ## Next steps
-- Get familiar with the types of [quality checks](/quality-checks/redem-score) ReDem performs to ensure data quality.
-- Start by [importing your first survey data](/features/data-import) into ReDem.
-- Explore the [API Reference](/api-reference) to understand the request and response formats.
+<CardGroup cols={2}>
+  <Card title="Explore Quality Checks" icon="hundred-points" href="/quality-checks/redem-score">
+    Explore the various quality checks ReDem performs to ensure top-tier data quality.
+  </Card>
+  <Card title="Import your first survey data" icon="file-import" href="/features/data-import">
+    Begin by importing your first survey data into ReDem to get started.
+  </Card>
+  <Card title="Explore the API Reference" icon="code" href="/api-reference">
+    Dive into the API Reference to understand request and response formats in detail.
+  </Card>
+  <Card title="Discover Cleaning and Review" icon="broom-wide" href="/features/cleaning-and-review">
+    Discover how ReDem makes data cleaning and review easier.
+  </Card>
+  <Card title="Learn about Benchmarking" icon="chart-line" href="/features/benchmarking">
+    Gain deeper insights with ReDem’s benchmarking feature.
+  </Card>
+  <Card title="Export your results" icon="file-export" href="/features/export-results">
+    Learn how to export results from ReDem efficiently.
+  </Card>
+</CardGroup>
 
 <br/>
 If you have any questions or need assistance, don’t hesitate to reach out to our support team at support@redem.io. We’re here to help you get the most out of ReDem!
