Refactor credit calculation table in redem-credits.mdx and add feedback feature

--- a/miscellaneous/redem-credits.mdx
+++ b/miscellaneous/redem-credits.mdx
@@ -16,7 +16,7 @@ The minimum cost is **4 credits per respondent**, with the total potentially inc
 
 This way, you have control over balancing cost and the level of data quality you want! 
 
-## Calculation of ReDem Credits
+## How Credit Calculation Works?
 
 The following list provides a clear overview of how credits are calculated based on Quality Scores. All calculations are performed on a per-respondent basis:
 
@@ -70,7 +70,7 @@ The total cost for a survey is calculated by summing the credit cost for each re
 
 <br/>
 
-### Example of Credit Calculation
+### Sample Credit Calculation
 Find an example of how credits are calculated for a single respondent below:
 
 <img className="hidden dark:block" src="/images/Credit-Calculation-Example-Dark.png" />
