--- a/api-reference/endpoint/get.mdx
+++ b/api-reference/endpoint/get.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'Get Respondent'
-openapi: 'GET /respondent/{id}'
+title: 'Get Respondent Status'
+openapi: 'GET /respondent/status/{surveyName}/{respondentId}'
 ---
