--- a/quality-checks/grid-question-score.mdx
+++ b/quality-checks/grid-question-score.mdx
@@ -4,3 +4,25 @@ description: 'Learn how the Grid-Question Score calculates'
 icon: "list"
 iconType: "regular"
 ---
+
+<img src="/images/GQS-Example.png" alt="Grid-Question Score Example" />
+
+## What is the Grid-Question Score?
+ReDem makes it easy to evaluate responses to grid questions. The Grid-Question Score (GQS) checks how respondents behave when answering matrix-style questions. Our unique set of checks, combined with machine learning, identifies and analyzes various answer patterns within these questions.
+
+## How is the Grid-Question Score calculated?
+We compare responses to identify different patterns and spot the poor response behaviour. 
+
+The closer the response pattern of a respondent is to a recognized "bad" response pattern—such as straightlining (selecting the same response option for all items in a grid) or zigzag patterns—the lower their score.
+
+An individual score is generated for each grid question, and these individual scores are then combined into an overall score.
+
+<Note>
+It is important to note that patterns in the responses (with the exception of straightlining) can only be identified if the items are imported in the order in which they were viewed by the respondent.
+</Note>
+
+## What patterns does the Grid-Question Score check for?
+Currently, we focus on analyzing specific response patterns to compare the response behaviour of respondents. Here are the key patterns we check for:
+
+<img src="/images/Pattern-for-GQS.png" alt="Grid-Question Score patterns" />
+
