Refactor how-it-works.mdx and add ReDem recommended criteria for questionnaires

--- a/how-it-works.mdx
+++ b/how-it-works.mdx
@@ -11,6 +11,10 @@ ReDem ensures data quality at every stage, from survey design to final data outp
 <Steps titleSize="h3">
   <Step title="Prepare questionnaire">
     <p> Standardized items for quality checks are added to the questionnaire and the survey can start. </p>
+
+    <Card title="Learn more about the ReDem recommended criteria for questionnaires" icon="clipboard-check" href="/miscellaneous/questionnaire-criteria" horizontal>
+    </Card>
+
   </Step>
   <Step title="Import data">
     Data can be quickly and easily uploaded as an Excel file or imported in real time via an integration with the survey software.
