Refactor API Request schema by adding information about all varibales for each data point type

--- a/api-reference/intro/for-survey-tools.mdx
+++ b/api-reference/intro/for-survey-tools.mdx
@@ -28,9 +28,10 @@ iconType: "regular"
           "qualityCheck": "OES",
           "openEndedAnswer": "We were at Lake Garda in Italy",
           "title": "Where did you spend your last vacation?",
-          "keywords": ["Beach", "Mountains", "Lake", "museums0", "Europe", "Asia", "Road Trip", "destination"],
+          "keywords": ["Beach", "Mountains", "Lake", "Museums", "Europe", "Asia", "Road Trip", "destination"],
           "isDuplicateEnabled": true,
-          "isCopyPaste": false
+          "isCopyPaste": false,
+          "allowedLanguages": ["en", "de", "it"]
         },
         {
           "questionId": "durationQ1", 
