Refactor API Request schema by updating endpoint paths
- change gridQuestionPattern -> gridAnswerPattern

--- a/api-reference/endpoint/getAllRespondents.mdx
+++ b/api-reference/endpoint/getAllRespondents.mdx
@@ -1,4 +1,4 @@
 ---
 title: 'Get All Respondents'
-openapi: 'GET /respondent/status/{surveyName}'
+openapi: 'GET /respondent/result/{projectName}'
 ---
