Update all link and hide some of the page from the navigation for release

--- a/api-reference/intro/for-survey-tools.mdx
+++ b/api-reference/intro/for-survey-tools.mdx
@@ -20,9 +20,8 @@ iconType: "regular"
     ```javascript Example request body
     {
       "respondentId": "RESP497770", 
-      "projectName": "Global Vacation Insights",
-      "surveyName": "Highlights from Your Last Vacation", 
-      "datapoints": [ 
+      "projectName": "Global Vacation Insights 2024",
+      "dataPoints": [ 
         {
           "qualityCheck": "OES",
           "dataPointId": "Q1",
