Add behaviour tracking script

--- a/api-reference/intro/for-researchers.mdx
+++ b/api-reference/intro/for-researchers.mdx
@@ -6,8 +6,11 @@ iconType: "regular"
 ---
 
 <Steps titleSize="h3">
-  <Step title="Sign up and create an API key">
-    <p> Sign up for a ReDem account and create an API key. </p>
+  <Step title="Login and create an API key">
+    <p> Login into your ReDem account and create an API key. </p>
+
+    1. Login to ReDem application and navigate to the account
+    2. Create new API key and copy the API Key
   </Step>
   <Step title="Integrate ReDem API into your workflow">
     <p>Integrate ReDem API into your workflow by using the API key to authenticate your requests.</p>
