--- a/api-reference/intro/for-survey-tools.mdx
+++ b/api-reference/intro/for-survey-tools.mdx
@@ -17,6 +17,8 @@ iconType: "regular"
   <Step title="Prepare your request data">
     <p>Ensure your data is formatted correctly according to the guidelines before sending it via the API. Below is a sample request object to help you structure your data properly.</p>
 
+    <p>As a survey tool, we **recommend adopting an asynchronous response approach**. Therefore, keep the `synchronousResponse` field set to `false`. It allows you to continue engaging with your respondents without waiting for a response from ReDem.</p>
+
     ```javascript Example request body
     {
       "respondentId": "RESP497770", 
@@ -63,7 +65,7 @@ iconType: "regular"
           }
         }
       },
-      "synchronousResponse": true,
+      "synchronousResponse": false,
     }
     ```
 
@@ -71,11 +73,38 @@ iconType: "regular"
   </Step>
   <Step title="Make an API request">
     <p>Submit an API request to ReDem, including the respondent's information and the API key</p>
+
+    ```javascript Example request (JavaScript)
+    const options = {
+      method: 'POST',
+      headers: {Authorization: 'Bearer <token>', 'Content-Type': 'application/json'},
+      body: '{"respondentId":"RESP497770","projectName":"Global Vacation Insights 2024","dataPoints":[{"qualityCheck":"OES","dataPointId":"Q1","question":"Where did you spend your last vacation?","answer":"We were at Lake Garda in Italy","keywords":["Beach","Mountains","Lake","Museums","Europe","Asia","Destination"],"activateDuplicateDetection":true,"allowedLanguages":["en","de","it"]},{"qualityCheck":"TS","dataPointId":"durationQ1","duration":42670},{"qualityCheck":"GQS","dataPointId":"Q2","gridAnswersPattern":[7,8,9,1,3,5,2,5,9,6]},{"qualityCheck":"OES","dataPointId":"Q3","question":"What was the most memorable part of your last vacation?","answer":"Italian cuisine, especially pizza and fine wine.","keywords":["Cuisine","Food","Art","Adventure","History","Landscape","Culture"],"activateDuplicateDetection":true,"allowedLanguages":["en","de","it"]},{"qualityCheck":"TS","dataPointId":"durationQ3","duration":69720},{"qualityCheck":"CHS","dataPointId":"CHS_Question","interviewData":[{"question":"What mode of transport did you use?","answer":"Car"},{"question":"How many days did you stay?","answer":5},{"question":"Did you travel with family?","answer":"yes"},{"question":"What was your approximate total budget for the trip (in EUR)?","answer":1500},{"question":"What type of accommodation did you stay in?","answer":"Hotel"}]},{"qualityCheck":"GQS","dataPointId":"Q4","gridAnswersPattern":[2,1,4,3,5,2,3,1,1,1]},{"qualityCheck":"TS","dataPointId":"totalDuration","duration":256843}],"cleaningSettings":{"standardSettings":false,"CustomSettings":{"redemScore":60,"OES":{"score":30,"minimumAnswers":2,"categories":{"genericAnswers":{"exclude":true,"minDataPoints":2},"noInformation":{"exclude":true,"minDataPoints":2},"badLanguage":{"exclude":true,"minDataPoints":2},"nonsense":{"exclude":true,"minDataPoints":1},"duplicateAnswer":{"exclude":true,"minDataPoints":1},"duplicateRespondent":{"exclude":true,"minDataPoints":1},"wrongTopic":{"exclude":true,"minDataPoints":1},"wrongLanguage":{"exclude":true,"minDataPoints":1},"copyPastAnswer":{"exclude":true,"minDataPoints":1},"fakeAnswer":{"exclude":true,"minDataPoints":1}}},"CHS":{"score":20},"GQS":{"score":10,"minimumItems":15},"TS":{"score":20}}},"synchronousResponse":false}'
+    };
+
+    fetch('http://localhost:8000/respondent/add', options)
+      .then(response => response.json())
+      .then(response => console.log(response))
+      .catch(err => console.error(err));
+    ```
+
+    <Note>For a complete example and more information on how to send the request, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It provides detailed explanations of all fields and their usage.</Note>
   </Step>
   <Step title="Interpret the API Response">
-    <p>The API will respond with a JSON object contains the results of the evaluation. Review the result and identify and filter out low-quality respondents.</p>
+    <p>Retrieve the response from ReDem to ensure your request was successfully submitted and is still in progress.</p>
+
+    ```javascript Example response (JavaScript)
+      {
+        "status": "JOB_PROGRESS"
+      }
+    ```
+
+    <Note>For a complete example and more information on how to use this response object, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It provides detailed explanations of all fields and their usage.</Note>
   </Step>
   <Step title="Synchronize respondent evaluations">
-    <p>Synchronize Respondent evaluations with ReDem.</p>
+    <p>Since an asynchronous response approach is recommended, you can synchronize respondent evaluations from ReDem into your survey tool at any time.</p>
+    
+    <p> To streamline the process, you can set up an automated job that performs the synchronization on a daily basis, ensuring your data remains up-to-date without requiring manual intervention. </p>
+
+    <p>To do this, you can use the [Get All Respondents](/api-reference/endpoint/getAllRespondents) endpoint.</p>
   </Step>
 </Steps>
