--- a/api-reference/endpoint/getRespondent.mdx
+++ b/api-reference/endpoint/getRespondent.mdx
@@ -1,4 +1,4 @@
 ---
 title: 'Get Respondent'
-openapi: 'GET /respondent/result/{projectName}/{respondentId}'
+openapi: 'GET /respondent/result/{surveyName}/{respondentId}'
 ---
