--- a/api-reference/endpoint/stopSurvey.mdx
+++ b/api-reference/endpoint/stopSurvey.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'Stop Project'
-openapi: 'GET /project/stop/{projectName}'
+title: 'Stop Survey'
+openapi: 'GET /survey/stop/{surveyName}'
 --- 
